<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mypoc_bg_color"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity">

    <include
        android:id="@+id/main2_title"
        layout="@layout/main_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_state"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/mypoc_bg_color"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/main_media_img"
                android:layout_height="28dp"
                android:layout_width="28dp"
                android:layout_marginStart="10dip"
                android:layout_gravity="center"
                android:background="@mipmap/media_idle"
                />

            <TextView
                android:id="@+id/main_media_text"
                style="@style/mic_statetext_wrap"
                android:layout_marginStart="8dip"
                android:text="@string/mic_state_mic_idle"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <com.mypoc.ptt.widget.MyPocViewPager
                android:id="@+id/main_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/main_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/mypoc_bottomtab_bgcolor"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!--对讲-->
            <RelativeLayout
                android:id="@+id/re_mypoc_talk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onTabClicked"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/iv_mypoc_talk"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/mypoc_tab_talk" />

                <TextView
                    android:id="@+id/tv_mypoc_talk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_mypoc_talk"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/mypoc_tab_talk"
                    android:textColor="@color/mypoc_bottomtab_txtcolor"
                    android:textSize="12sp" />


            </RelativeLayout>

            <!--组成员-->
            <RelativeLayout
                android:id="@+id/re_mypoc_member"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onTabClicked"
                android:padding="3dp"
                tools:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_mypoc_member"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/mypoc_tab_member" />

                <TextView
                    android:id="@+id/tv_mypoc_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_mypoc_member"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/mypoc_tab_group"
                    android:textColor="@color/mypoc_bottomtab_txtcolor"
                    android:textSize="12sp" />

            </RelativeLayout>

            <!--通讯录-->
            <RelativeLayout
                android:id="@+id/re_mypoc_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onTabClicked"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/iv_mypoc_contact"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/mypoc_tab_contact" />

                <TextView
                    android:id="@+id/tv_mypoc_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_mypoc_contact"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/mypoc_tab_contact"
                    android:textColor="@color/mypoc_bottomtab_txtcolor"
                    android:textSize="12sp" />



            </RelativeLayout>

            <!--我的-->
            <RelativeLayout
                android:id="@+id/re_mypoc_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onTabClicked"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/iv_mypoc_profile"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/mypoc_tab_profile" />

                <TextView
                    android:id="@+id/tv_mypoc_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_mypoc_profile"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/mypoc_tab_profile"
                    android:textColor="@color/mypoc_bottomtab_txtcolor"
                    android:textSize="12sp" />



            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>